# CyberSecRust

Mod00_arachnida/Scorpion/: Cargo.toml
Mod00_arachnida/Scorpion/src/: exif.rs  exif_parser.rs  lib.rs  main.rs
Mod00_arachnida/Scorpion/src/exif/: exif_parser.rs
Mod00_arachnida/Spider/: Cargo.toml
Mod00_arachnida/Spider/src/: main.rs  scraper.rs  spider.rs
