[package]
name = "Spider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
difference = "2.0.0"
itertools = "0.14.0"
minreq = {version = "2.14.1", features = ["https"]} 
regex = "1.12.2"
url = "2.5.8"
